// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "sailog/proto";
option java_multiple_files = true;
option java_outer_classname = "Raft";

package raft;

// The greeting service definition.
service Raft {
  // Exchange votes
  rpc RequestVote (RequestVoteMessage) returns (ReplyVoteMessage) {}
}

message RequestVoteMessage {
  int32 term = 1;
  int32 candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message ReplyVoteMessage {
  int32 term = 1;
  bool voteGranted = 2;
}
